# diffusion2d

./: README.md
application/: README.md  pyproject.toml
application/glaenzls_diffusion2d/: diffusion2d.py  output.py
